Removed /logout route
